<?xml version="1.0"?>
<package format="2">
  <name>path_follower</name>
  <version>0.0.0</version>
  <description>The path_follower package</description>
  <maintainer email="lion@todo.todo">lion</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>costmap_2d</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
